# personal-finance-database

./: .gitignore  .run.sh.swp  app.py  main.py  manual_tagger.py  pyproject.toml  requirements.txt  run.sh  run_app.sh  run_tagger.sh  streamlit_app.py
configs/: cat_rules.json  config.json  config_test.json  rules_test.json
data/: README.org
data/raw_sample/chase_credit_card/: credit1.csv
data/raw_sample/us_bank_1/: check1.csv  check2.csv
db/: schema.sql  test.db
personal_finance_database.egg-info/: PKG-INFO  SOURCES.txt
src/: Agent.py  App.py  Categorize.py  CategoryManager.py  CategoryRule.py  CategoryRuleManager.py  DashboardService.py  Dedupe.py  Ingest.py  Normalize.py  QueryBuilder.py  Repository.py  TagManager.py  Tagger.py  config.py  utils.py
ui/: state.py
ui/pages/: about.py  database.py  home.py  test.py  trends.py
